# cpfn

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_backup.txt  useful_commands.txt
assets/: file.txt
src/cpfn/: __init__.py  estimator.py
tests/: conftest.py  test_estimator.py
