[project]
name = "cpfn"
version = "0.1.0"
description = "Conditional Push-Forward Neural Network estimator"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENCE" }
authors = [ { name = "tedescolor" } ]
dependencies = [
	"torch>=2.0",
	"numpy>=1.20",
	"tqdm>=4.60",
]

[project.urls]
"Homepage" = ""

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

